switch to staging api endpoint by default

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "api_base_url": "https://ckan.publishing.service.gov.uk/api",
+    "api_base_url": "https://ckan.staging.publishing.service.gov.uk/api",
     "api_user_agent": "ckan-functional-tests"
 }
