add pytest-subtests dependency

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,8 +19,9 @@ pluggy==0.13.1            # via -r requirements.txt, pytest
 py==1.8.1                 # via -r requirements.txt, pytest
 pyparsing==2.4.6          # via -r requirements.txt, packaging
 pyrsistent==0.15.7        # via -r requirements.txt, jsonschema
+pytest-subtests==0.3.0    # via -r requirements.txt
 pytest-variables==1.9.0   # via -r requirements.txt
-pytest==5.4.1             # via -r requirements.txt, pytest-variables
+pytest==5.4.1             # via -r requirements.txt, pytest-subtests, pytest-variables
 requests==2.23.0          # via -r requirements.txt
 six==1.14.0               # via -r requirements.txt, jsonschema, packaging, pip-tools, pyrsistent
 urllib3==1.25.8           # via -r requirements.txt, requests
