--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,6 @@
 pytest>=5,<6
 pytest-variables>=1.9,<2
+pytest-subtests>=0.3,<0.4
 requests>=2.23,<2.24
 jsonschema>=3.2,<3.3
 git+https://github.com/alphagov/digitalmarketplace-test-utils.git@2.6.2#egg=digitalmarketplace-test-utils==2.6.2
