--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -23,7 +23,9 @@ pytest-subtests==0.3.0    # via -r requirements.txt
 pytest-variables==1.9.0   # via -r requirements.txt
 pytest==5.4.1             # via -r requirements.txt, pytest-subtests, pytest-variables
 requests==2.23.0          # via -r requirements.txt
-six==1.14.0               # via -r requirements.txt, jsonschema, packaging, pip-tools, pyrsistent
+rfc3339-validator==0.1.2  # via -r requirements.txt
+rfc3986-validator==0.1.1  # via -r requirements.txt
+six==1.14.0               # via -r requirements.txt, jsonschema, packaging, pip-tools, pyrsistent, rfc3339-validator
 urllib3==1.25.8           # via -r requirements.txt, requests
 wcwidth==0.1.8            # via -r requirements.txt, pytest
 zipp==3.1.0               # via -r requirements.txt, importlib-metadata
