--- a/requirements.in
+++ b/requirements.in
@@ -3,4 +3,6 @@ pytest-variables>=1.9,<2
 pytest-subtests>=0.3,<0.4
 requests>=2.23,<2.24
 jsonschema>=3.2,<3.3
+rfc3339-validator>=0.1.2,<0.2
+rfc3986-validator>=0.1.1,<0.2
 git+https://github.com/alphagov/digitalmarketplace-test-utils.git@2.6.2#egg=digitalmarketplace-test-utils==2.6.2
