--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,9 @@ pytest-subtests==0.3.0    # via -r requirements.in
 pytest-variables==1.9.0   # via -r requirements.in
 pytest==5.4.1             # via -r requirements.in, pytest-subtests, pytest-variables
 requests==2.23.0          # via -r requirements.in
-six==1.14.0               # via jsonschema, packaging, pyrsistent
+rfc3339-validator==0.1.2  # via -r requirements.in
+rfc3986-validator==0.1.1  # via -r requirements.in
+six==1.14.0               # via jsonschema, packaging, pyrsistent, rfc3339-validator
 urllib3==1.25.8           # via requests
 wcwidth==0.1.8            # via pytest
 zipp==3.1.0               # via importlib-metadata
