--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "api_base_url": "https://ckan.staging.publishing.service.gov.uk/api",
     "api_user_agent": "ckan-functional-tests",
-    "inc_sync_sensitive": true
+    "inc_sync_sensitive": true,
+    "inc_fixed_data": true
 }
