--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "api_base_url": "https://ckan.staging.publishing.service.gov.uk/api",
+    "ckan_version": "2.8",
     "api_user_agent": "ckan-functional-tests",
     "inc_sync_sensitive": true,
     "inc_fixed_data": true,
